2008-01-07  Guido Diepen  <guido@guidodiepen.nl>

	* Fixed small bug in raising error in closeHandle function

2007-12-27  Guido Diepen  <guido@jcwodan.nl>

	* Small fix in rapi2 call of CeCreateProcess2 (remove optional-read)
	* Added python binding for CeFindAllFiles
	* Added python binding for CeCloseHandle
	* Added python binding for CeCreateFile
	* Added python binding for CeReadFile
	* Added python binding for CeWriteFilea
	* Added python binding for CeCreateProcess
	* Note, all of the above are initial implementations, more studying
	  has to be done regarding error handling. Problem is inconsistency
	  with error handling in the original microsoft code, sometimes 
	  zero means succes, sometimes non-zero means succes
	
2007-12-23  Guido Diepen  <guido@jcwodan.nl>

	* Added python binding for CeGetDiskFreeSpaceEx()
	
2007-12-23  Guido Diepen  <guido@jcwodan.nl>

	* added RAPI2 implementation of CeGetDiskFreeSpaceEx()
	  rapi call.
	* Some minor fixes in types (also were fixed in libsynce)
	* Updated README in rapi2 to show which methods are 
	  implemented and which not.
	
2007-12-18  Guido Diepen  <guido@jcwodan.nl>

	* added python binding for CeGetSystemPowerStatus
	
2007-12-17  Mark Ellis  <mark@mpellis.org.uk>

	* more registry fixes in rapi1
	* added CeRegDeleteKey() and CeRegDeleteValue() to rapi 1
	
2007-12-13  Mark Ellis  <mark@mpellis.org.uk>

	* fixes to rapi_buffer_debug_ header
	* fixes to CeRegQueryInfoKey & CeRegEnumValue in rapi1
	* improved NULL handling in rapi2 from Guido Diepen
	* extra functionality in synce-registry from Guido Diepen

2007-12-06  Mark Ellis  <mark@mpellis.org.uk>

	* patch from Guido Diepen, many thanks !!
	* added CeRegQueryInfoKey and CeRegEnumValue2 to rapi2
	* fix to rapi_buffer_read_string
	* new debuging functions

2007-11-28  Mark Ellis  <mark@mpellis.org.uk>

	* pls.c and pcp.1 patch from Debian package

2007-09-18  Mark Ellis  <mark@mpellis.org.uk>

	* started Changelog !